# ibridger

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  publish-js.yml  release-cpp.yml
cmake/: Dependencies.cmake  ibridgerConfig.cmake.in
core/: CMakeLists.txt
core/include/ibridger/protocol/: envelope_codec.h  framing.h
core/include/ibridger/rpc/: client.h  dispatcher.h  service.h  service_registry.h
core/include/ibridger/transport/: connection.h  named_pipe_transport.h  transport.h  types.h
core/src/: ibridger.cpp
core/src/protocol/: envelope_codec.cpp  framing.cpp
core/src/rpc/: dispatcher.cpp  service_registry.cpp
core/src/rpc/builtin/: ping_service.cpp
core/src/transport/: named_pipe_transport.cpp  unix_socket_transport.cpp
core/tests/: CMakeLists.txt  proto_test.cpp  sanity_test.cpp
core/tests/protocol/: envelope_codec_test.cpp  framing_test.cpp
core/tests/rpc/: dispatcher_test.cpp  service_registry_test.cpp
core/tests/transport/: named_pipe_test.cpp
docs/: ROADMAP.md  WIRE_PROTOCOL.md  benchmarks.md
proto/: CMakeLists.txt
proto/ibridger/: constants.proto  envelope.proto  rpc.proto
sdk/cpp/: CMakeLists.txt
sdk/cpp/core/benchmarks/: CMakeLists.txt  unix_socket_rpc.cpp
sdk/cpp/core/tests/: convenience_header_test.cpp  proto_test.cpp  sanity_test.cpp
sdk/cpp/src/: ibridger_sdk.cpp
sdk/js/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdk/js/examples/: README.md  echo-client.ts  echo-server.ts  ping-client.ts
sdk/js/scripts/: generate-proto.sh
sdk/js/src/: index.ts
sdk/js/src/protocol/: envelope-codec.ts  framing.ts
sdk/js/src/rpc/: client.ts  server.ts
sdk/js/src/transport/: types.ts  unix-socket-server.ts  unix-socket.ts
sdk/js/tests/: proto.test.ts
(+38 files in other folders)
